--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment two  Of html css </title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="contact.css"/>
 </head>
-<body class="home">
+<body class="contact">
     <header class="main-header">
-        <h1>first blog! |home|</h1>
+        <h1>first blog! |contact|</h1>
         <nav>
             <a href="index.html">home</a>
             <a href="about.html">about</a>
@@ -62,3 +63,4 @@
 </footer>
 </body>
 </html>
+
