--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment two  Of html css </title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="about.css"/>
 </head>
-<body class="home">
+<body class="about">
     <header class="main-header">
-        <h1>first blog! |home|</h1>
+        <h1>first blog! |about|</h1>
         <nav>
             <a href="index.html">home</a>
             <a href="about.html">about</a>
