--- a/index.html
+++ b/index.html
@@ -4,61 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment two  Of html css </title>
-    <link rel="stylesheet" href="style.css"/>
+    <title>box model-1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
-    <header class="main-header">
-        <h1>first blog! |home|</h1>
-        <nav>
-            <a href="index.html">home</a>
-            <a href="about.html">about</a>
-            <a href="contact.html">contact</a>
-        </nav>
+<body>
+    <header>
+        <h1>This is our first box model!</h1>
     </header>
-    <main>
-        <section>
-            <article>
-                <header>
-                <h2>this is our first assignment!.</h2>
-                <img src="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
-           </header>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-             numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-             est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-             numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-             est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-             numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-             est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
+<main>
+    <section>
+        <p class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum qu
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum qu
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum qu
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum qu
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum qu
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum quas perspiciatis soluta obcaecati!
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Deserunt placeat, id cumque blanditiis consequatur non voluptatum laudantium
+             nisi sint, facere beatae, quod rem dolor nulla harum q
             </p>
-            </article>
-        </section>
-    </main>
-    <article>
-        <header>
-        <h2>this is our second assignment!.</h2>
-        <img src="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
-   </header>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-     numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-     est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-     numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-     est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-     numquam eos exercitationem ipsum veniam aspernatur ipsam voluptatum, doloremque laboriosam,
-     est quas amet hic pariatur voluptas reiciendis dignissimos quis enim cumque?
-    </p>
-    </article>
-</section>
+    
+             <img src="https://thumbs.dreamstime.com/b/happy-golden-retriever-puppy-seven-week-old-outdoors-sunny-day-46046484.jpg">
+             <div class="circle"></div>
+    </section>
 </main>
 <footer class="footer">
-    <h3>footer</h3>
-    <a href="#">facebook</a>
-    <a href="#">instagram</a>
-    <a href="#">twitter</a>
+    <nav>
+        <a href="#">service</a>
+        <a href="#">about</a>
+        <a href="#">contact</a>
+    </nav>
 </footer>
+
 </body>
 </html>
