--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prototype-assignment</title>
+    <title>prototype1</title>
     <!-- link -->
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,200;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
